fix: menu btn on mobile

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -75,7 +75,7 @@
     display: block;
     position: absolute;
     top: 22px;
-    right: -3px;
+    right: 0;
     z-index: 1;
   }
 
@@ -96,7 +96,7 @@
     position: absolute;
     width: 50px;
     height: 50px;
-    right: 30px;
+    right: 35px;
   }
 }
 
